--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,6 @@
     <div id="app"></div>
     <div id="dialog"></div>
     <div id="notification"></div>
-    <script src="./index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
